Core: Revert changes to SensorMLRetriever
- Partial revert of 6e12555945228ef988b19d9fb8358225fabffc11
- Minor refactoring